create transaction controller with pg
